# OpenAnimator-NG

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.markdown  README.md  ROADMAP.md  makefile  pixi.toml  poco_notes.md  update-nodurations.bat
poco/: CHANGELOG.md  CMakeLists.txt  README.md
poco/cmake/: PocoPoeLibrary.cmake
poco/include/: aaconfig.h  commonst.h  errcodes.h  filepath.h  jfile.h  jimk.h  linklist.h  pjhost.h  poco_errcodes.h  poco_port.h  pocoface.h  pocolib.h  pocoload.h  pocorex.h  ptrmacro.h  stdtypes.h  token.h  util.h  xfile.h
poco/include/poco/: poco.h
poco/pocohost/: CMakeLists.txt  pjhost.c
poco/poekit/: CMakeLists.txt
poco/poekit/colorutl/: CMakeLists.txt  COLTEST.POC  colorutl.c  rgbhls.c
poco/poekit/eco/: eco.c
poco/poekit/flicplay/: flicplay.c
poco/poekit/hello/: CMakeLists.txt  hello.c  hello.poc
poco/poekit/lookup/: lookup.c
poco/poekit/otdemo/: otdemo.c
poco/poekit/pstamp/: CMakeLists.txt  FLISUMRY.POC  pstamp.c
poco/poekit/skeleton/: poeskel.c
poco/poekit/test_libs/badver/: CMakeLists.txt  badver.c
poco/poekit/test_libs/empty/: CMakeLists.txt  empty.c
poco/poekit/test_libs/noentry/: CMakeLists.txt  noentry.c
poco/poekit/test_libs/nullret/: CMakeLists.txt  nullret.c
poco/poekit/vscreen/: vscreen.c
poco/src/: POCFILES.INC  POCO.LNK  POCO.OBS  VERSIONS.DOC  VERSNOLD.DOC  bcutil.c  bop.c  chopper.c  code.c  declare.c  dummylib.c  fold.c  funccall.c  linklist.c  lostdio.h  main.c  mathlib.c  pocmemry.c  poco.c  poco.h  poco_ffi.c  pocodis.c  pocodos_standalone.c  pocoface.c  pocolib.c  pocoload.c  pocoop.c  pocoop.h  pocotype.c  port.c  postring.c  pp.c  pp.h  ppeval.c  pplists.h  runops.c  safefile.c  statemen.c  statemen.h  strlib.c  (+5 more)
poco/src/test/neg/: NAMPER02.POC  NOIF.POC  NPARMCT1.POC  NPARMCT2.POC  NPARMCT3.POC  NRECURSE.POC  NSTRNG01.POC  NSTRNG03.POC  NSTRUC04.POC  NSTRUC05.POC  NSTRUC09.POC  NSTRUC11.POC  NVOIDRET.POC  SUBS.IN
poco/src/test/pos/: PFOR01.POC  PIF01.POC  PLONESEM.POC
poco/test/: CMakeLists.txt
poco/test/neg/: NAMPER01.POC  NARRVAR.POC  NBREAK01.POC  NBREAK02.POC  NCAST01.POC  NOELSE.POC  NPARMCT0.POC  NSTRNG02.POC  NSTRUC01.POC  NSTRUC07.POC  NSTRUC08.POC  NSTRUC12.POC  NSTRUC13.POC  NTOKPP.POC  NTYPE02.POC  addr_dot_deref.poc  addr_in_decl.poc  call_array_as_func.poc  call_int_as_func.poc  char_in_param_list.poc  char_to_ptr.poc  dollar_in_name_01.poc  dollar_in_name_02.poc  dollar_in_name_03.poc  dollar_in_name_04.poc  func_as_number.poc  nlib01.poc  nlib02.poc  nlib03.poc  nlib04.poc  nlib05.poc  param_count_4_of_5.poc  struct_arrow_on_val.poc  struct_dot_on_ptr.poc  struct_keyword_dup.poc  struct_keyword_name.poc  struct_member_keyword.poc  token_only_comment.poc  type_funcptr_mismatch.poc
poco/test/pos/: PSTRUC01.POC  PSTRUC03.POC  array_1d.poc  array_2d.poc  array_max_dims.poc  char_constants.poc  fnsplit_roundtrip.poc  pointer_return.poc  sprintf_variadic.poc  struct_nested.poc  token_long_idents.poc
src/: CMakeLists.txt  a3d.c  about_box.c  alt.c  auto.c  brush.c  celpaste.c  cfit.c  cluster.c  ellipse.c  files.c  fli.c  flicel.c  flicelio.c  flood.c  globals.c  hitext.c  main.c  mask.c  options.c  packcmap.c  palet2.c  picfiles.c  pjfont.c  pocoa3d.c  pocoalt.c  pocoblit.c  pococel.c  pocodos.c  pocodraw.c  pocofile.c  pocoflic.c  pocofunc.c  pocogvar.c  pocolibs.c  pocomode.c  pocopicdrive.c  pocoqnum.c  pocorex.c  pocotext.c  (+30 more)
src/animhost/: CMakeLists.txt  hostlib_table.c
src/fileio/: CMakeLists.txt  dfile.c  fpnsplit.c  jfile.c
src/font/: CMakeLists.txt  sail.c
src/gfx/: CMakeLists.txt  cmrgbhls.c  rcmapget.c
src/inc/: a3d.h  alt.h  brush.h  cfit.h  errcodes.h  ffile.h  filepath.h  fli.h  flicel.h  flood.h  gfxlib.h  homepul.h  inkaid.h  jfile.h  jimk.h  linklist.h  marqi.h  memory.h  picdrive.h  pjassert.h  pocodraw.h  pocoface.h  pocolib.h  pocorex.h  redo.h  rexlib.h  sep.h  stdiolib.h  title.h  token.h  usehlib.h  xfile.h
src/input/: idr_sdl.c
src/menus/: choices.c  pull.c  pullsee.c  slider.c  stringq.c  wndoio.c
src/picdrive/: CMakeLists.txt  sdl_bmp.c  sdl_convert.c  sdl_gif.c  sdl_jpeg.c  sdl_pcx.c  sdl_pdr.c  sdl_pdr.h  sdl_png.c
src/picdrive/flilo/: flilo.c
src/picdrive/host/: pdr_support.c
src/picdrive/pcx/: pcx.c  pcx.h
src/picdrive/skeleton/: skeleton.c
src/pj_sdl/: fs_sdl.c  pj_sdl.c  pj_sdl.h
src/pjhigh/: CMakeLists.txt  config.c  errline.c  init_sdl.c  pdrpic.c  qchoice.c  qreqnum.c  qreqstr.c  smuqreqn.c  smuvqren.c  vqreqnum.c
src/poco/: CMakeLists.txt  VERSIONS.DOC  code.c  funccall.c  main.c  poco_ffi.c
src/poco/poco_gui/: CMakeLists.txt  poco_gui.mm
src/poco/test/: CMakeLists.txt
src/poco_intern/: PICLIST.POC
src/rastlib/: rastcall.c  rcphseg.c  vdr_sdl.c
src/resource/: aa.mu  numpic.poc  show'em.poc
src/rexlib/: CMakeLists.txt  aasyslib.c  stdiolib.c
src/rexlib/rexhost/: rexlib.c  rexload.c  rexload.h
src/util/: dosecode.c  memalloc.c  memclow.c
tests/: CMakeLists.txt  test_color_hls.c  test_fnsplit.c
